--- a/index.html
+++ b/index.html
@@ -21,39 +21,210 @@
         </nav>
     </header>
     <main>
-        <h1 class="hFlex">He's Finally Arrived.&nbsp;<span id="offsetTxtContainer"><span><span class="whiteTxt"> Kevin Buckle</span>.</span><span class="positionedTxt"><span class="blueTxt">UX/UI Designed</span>.</span>
-            </span>
-        </h1>
+        <div class="container--grandParent">
+            <h1 class="hFlex">He's Finally Arrived.&nbsp;<span id="offsetTxtContainer"><span><span class="whiteTxt"> Kevin Buckle</span>.</span><span class="positionedTxt"><span class="blueTxt">UX/UI Designed</span>.</span>
+                </span>
+            </h1>
+            <div class="flexContainer">
+                <div class="container">
+                    <div class="container--row">
+                        <img src="images/home_img_2.png">
+                        <button id="downloadRes">Download Resume</button>
+                    </div>
+                    <div id="contentAbout" class="container--narrow">
+                        Hello, I’m Kevin Buckle, aspiring Product Designer. I have a background in fine art, design, and cultural philosophy.<br> <br> Not only am I a dedicated follower of fashion, I enjoy solving problems both design and otherwise. I
+                        love creating components, developing prototypes, crushing user flows and writing far too much copy. <br> <br> I have freelanced as a graphic/ commercial designer and illustrator designing album art and merchandise for bands and
+                        brands. I have been rapidly immersing myself in UX/ UI and absorbing its moisture like a thirsty hound to continue the next journey of my design aspirations.
+                    </div>
+                    <div>
+                        <div id="mainAnimation" class="container container--row">
+                            <img src="images/portfolio_gif_2.gif">
+                            <div class="container--row">
+                                <h2 class="hClr2">Highlighted Projects</h2>
+                                <div id="chevron">
+                                    <img class="jello-horizontal" src="images/Chevron.svg">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </main>
+    <div class="sectionEndPadding">
+
+    </div>
+
+    <!-- My work start code using grid -->
+    <div id="workHeader">
+        <h1 class="hClr1">Kevin Buckle <span class="whiteTxt">Work</span></h1>
+
+    </div>
+    <section id="myWork">
         <div class="flexContainer">
-            <div class="container">
-                <div class="container--row">
-                    <img src="images/home_img_2.png">
-                    <button>Download Resume</button>
+            <div id="workGrid">
+                <div id="leftWork">
+                    <div class="workSum">
+                        <h2>Welcome to Work, Portfolio Goer.
+                        </h2>
+                        <p><span class="yellowTxt">Brief</span>: I have curated a selection of case studies to highlight the skill set I’ve developed through my studies at Uof T UX/UI Bootcamp.
+                            <br> <br><span class="yellowTxt">Impact</span>: Discover the process my teams have taken to work towards defining problems and developing designs that seek impactful solutions. Journey along with Mr. Buckle’s team through responsive
+                            redesigns and start up travel planners.
+                        </p>
+                    </div>
                 </div>
-                <div id="contentAbout" class="container--narrow">
-                    Hello, I’m Kevin Buckle, aspiring Product Designer. I have a background in fine art, design, and cultural philosophy.<br> <br> Not only am I a dedicated follower of fashion, I enjoy solving problems both design and otherwise. I love
-                    creating components, developing prototypes, crushing user flows and writing far too much copy. <br> <br> I have freelanced as a graphic/ commercial designer and illustrator designing album art and merchandise for bands and brands.
-                    I have been rapidly immersing myself in UX/ UI and absorbing its moisture like a thirsty hound to continue the next journey of my design aspirations.
-                </div>
-                <div>
-                    <div id="mainAnimation" class="container container--row">
-                        <img src="images/portfolio_gif_2.gif">
-                        <div class="container--row">
-                            <h2>Highlighted Projects</h2>
-                            <div id="chevron">
-                                <img src="images/Chevron.svg">
+                <div id="middleWork">
+                    <div class="container--grandParent">
+                        <h2 class="hClr2 txtEnd">Highlighted Projects</h2>
+                        <div id="gridContainer1">
+                            <div class="prog1-item1">
+                                <img src="images/RWD CBC MOCK UP IMG.png">
+                            </div>
+                            <div class="prog1-item2">
+                                <h2 class="projectTitle">RWD Redesign CBC Radio-Canada:<br><span class="proj1-subHeadStyle">Desktop and Mobile Case Study</span>
+                                </h2>
+                                <p class="projBriefTxt">Responsive Web Design Solutions redesigning Government Agency Website CBC Radio-Canada. </p>
+                                <div id="viewProjCta"><button class="viewProjCta">view project</button></div>
+                            </div>
+                        </div>
+                        <div id="gridContainer2">
+                            <div class="proj2-item1">
+                                <img src="images/Itrip mock up img.png">
+                            </div>
+                            <div class="proj2-item2">
+                                <h2 class="projectTitle">iTrip Mobile Travel App Case Study:<br><span class="proj2-subHeadStyle">Start Up Development and Design</span>
+                                </h2>
+                                <p class="projBriefTxt">Researched and Design a mobile <br> app for Travel Planning Post-pandemic</p>
+                                <div id="viewProjCta">
+                                    <button class="viewProjCta">view project</button>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
-    </main>
-    <a href="#" class="returnUp">
-        <img src="images/return_up.svg"></a>
+
+    </section>
+    <div class="sectionEndPadding">
+
+    </div>
+
+    <!-- 3.new skills -->
+
+    <section id="kbSkills">
+        <div id="skillsHeader">
+            <h1>Kevin Buckle <span class="whiteTxt">UX/UI Skills</span></h1>
+        </div>
+        <div class="flexContainer">
+            <div class="container">
+                <div class="skillSum">
+                    <h2>Hello Again, <br>Portfolio Goer.</h2>
+                    <p><span class="yellowTxt">Brief</span>: I have an obsessive fascination with details.
+                        <br> <br><span class="yellowTxt">Impact</span>: The skills I continue to craft are an attempt to satisfy my thoughts of unwavering analysis and ideation. I’ll admit My fixation with detail is tacitly selfish. However, ultimately
+                        I believe that in embracing these skills and methods I am able to help find creatively simple solutions.
+                    </p>
+                    <img src="images/me and bird img (1).png">
+                </div>
+            </div>
+            <div class="container--grandParent">
+                <div class="flexContainer">
+                    <div class="container--border container--row">
+                        <div class="imgCenter--flex"><img src="images/User Research img.png"></div>
+                        <h3 class="txtCenter--flex">User Research</h3>
+                        <div class="container--row">
+
+                            <li>Define User Problems</li>
+                            <li>Competitor Analysis
+                            </li>
+                            <li>Develop Research Plan
+                            </li>
+                            <li>User Interviews/ Surveys
+                            </li>
+                            <li>Analysis User Data
+                            </li>
+                            <li>Affinity Diagrams
+                            </li>
+                            <li>Empathy Map</li>
+                            <li>User Personas
+                            </li>
+                            <li>Story Telling
+                            </li>
+                            <li>Task/ User Flows
+                            </li>
+                            <li>Card Sorting
+                            </li>
+                            <li>Information Architecture
+                            </li>
+                            <li>Usability/ A-B Testing
+                            </li>
+                            <li>Impactful User-centric Solutions
+                            </li>
+                        </div>
+                    </div>
+                    <div class="container--border container--row">
+                        <div class="imgCenter--flex"><img src="images/User Interface Design img.png"></div>
+                        <h3 class="txtCenter--flex">User Interface Design</h3>
+                        <div class="container--row">
+
+                            <li>UI Patterns and Heuristics
+                            </li>
+                            <li>Gestalt Principles</li>
+                            <li>Colour Theory
+                            </li>
+                            <li>Iconography and Graphic Design
+                            </li>
+                            <li>Typography
+                            </li>
+                            <li> Style Guides
+                            </li>
+                            <li>Component Development
+                            </li>
+                            <li>Wireframing</li>
+                            <li>Mobile First Design Methods
+                            </li>
+                            <li>Responsive Web Design</li>
+                            <li>Low to High Fidelity Prototyping</li>
+                            <li>Interaction Design
+                            </li>
+                            <li>Mockups</li>
+
+                        </div>
+                    </div>
+                    <div class="container--border container--row">
+                        <div class="imgCenter--flex"><img src="images/tools img.png"></div>
+                        <h3 class="txtCenter--flex">Tools</h3>
+                        <div class="container--row">
+
+                            <li>Figma</li>
+                            <li>Adobe XD
+                            </li>
+                            <li>Miro</li>
+                            <li>Zeplin</li>
+                            <li>Adobe Illustrator
+                            </li>
+                            <li>Adobe Photoshop
+                            </li>
+                            <li>Final Cut Pro
+                            </li>
+                            <li>GitHub
+                            </li>
+                            <li>VS Code</li>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <div class="sectionEndPadding">
+        <section class="endUp">
+            <a href="#" class="returnUp">
+                <img src="images/return_up.svg"></a>
+        </section>
 
 </body>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="js/index.js"></script>
 
 </html>
