--- a/index.html
+++ b/index.html
@@ -2,8 +2,21 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-BWM4RRXBX2"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+
+        function gtag() {
+            dataLayer.push(arguments);
+        }
+        gtag('js', new Date());
+
+        gtag('config', 'G-BWM4RRXBX2');
+    </script>
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <title></title>
+
 </head>
 
 <body>
@@ -76,7 +89,7 @@
                 </div>
                 <div id="middleWork">
                     <div class="container--grandParent">
-                        <h2 class="hClr2 txtEnd">Highlighted Projects</h2>
+                        <h2 class="hClr2 txtEnds">Highlighted Projects</h2>
                         <div id="gridContainer1">
                             <div class="prog1-item1">
                                 <img src="images/RWD CBC MOCK UP IMG.png">
