hw 19 jquery  button links and states
lots of jquery
nav links to page sections
scroll
return up fad in and out

--- a/index.html
+++ b/index.html
@@ -19,17 +19,17 @@
 
 </head>
 
-<body>
+<body id="body">
     <header class="navigation">
         <div class="inline-block logo">
             <img src="images/logoBlue.png">
         </div>
         <nav class="inline-block">
             <ul>
-                <li class="inline-block">about</li>
-                <li class="inline-block">skills</li>
-                <li class="inline-block">work</li>
-                <li class="inline-block">contact</li>
+                <li id="aboutLink" class="inline-block">about</li>
+                <li id="workLink" class="inline-block">work</li>
+                <li id="skillsLink" class="inline-block">skills</li>
+                <li id="contactLink" class="inline-block">contact</li>
             </ul>
         </nav>
     </header>
@@ -65,16 +65,16 @@
             </div>
         </div>
     </main>
-    <div class="sectionEndPadding">
-
-    </div>
 
     <!-- My work start code using grid -->
+
     <div id="workHeader">
+
         <h1 class="hClr1">Kevin Buckle <span class="whiteTxt">Work</span></h1>
 
     </div>
     <section id="myWork">
+
         <div class="flexContainer">
             <div id="workGrid">
                 <div id="leftWork">
@@ -89,7 +89,7 @@
                 </div>
                 <div id="middleWork">
                     <div class="container--grandParent">
-                        <h2 class="hClr2 txtEnds">Highlighted Projects</h2>
+                        <h2 class="hClr2 txtEnd">Highlighted Projects</h2>
                         <div id="gridContainer1">
                             <div class="prog1-item1">
                                 <img src="images/RWD CBC MOCK UP IMG.png">
@@ -120,9 +120,6 @@
         </div>
 
     </section>
-    <div class="sectionEndPadding">
-
-    </div>
 
     <!-- 3.new skills -->
 
@@ -147,94 +144,198 @@
                         <div class="imgCenter--flex"><img src="images/User Research img.png"></div>
                         <h3 class="txtCenter--flex">User Research</h3>
                         <div class="container--row">
-
-                            <li>Define User Problems</li>
-                            <li>Competitor Analysis
-                            </li>
-                            <li>Develop Research Plan
-                            </li>
-                            <li>User Interviews/ Surveys
-                            </li>
-                            <li>Analysis User Data
-                            </li>
-                            <li>Affinity Diagrams
-                            </li>
-                            <li>Empathy Map</li>
-                            <li>User Personas
-                            </li>
-                            <li>Story Telling
-                            </li>
-                            <li>Task/ User Flows
-                            </li>
-                            <li>Card Sorting
-                            </li>
-                            <li>Information Architecture
-                            </li>
-                            <li>Usability/ A-B Testing
-                            </li>
-                            <li>Impactful User-centric Solutions
-                            </li>
+                            <ul class="skillList">
+                                <li>Define User Problems</li>
+                                <li>Competitor Analysis
+                                </li>
+                                <li>Develop Research Plan
+                                </li>
+                                <li>User Interviews/ Surveys
+                                </li>
+                                <li>Analysis User Data
+                                </li>
+                                <li>Affinity Diagrams
+                                </li>
+                                <li>Empathy Map</li>
+                                <li>User Personas
+                                </li>
+                                <li>Story Telling
+                                </li>
+                                <li>Task/ User Flows
+                                </li>
+                                <li>Card Sorting
+                                </li>
+                                <li>Information Architecture
+                                </li>
+                                <li>Usability/ A-B Testing
+                                </li>
+                                <li>Impactful User-centric Solutions
+                                </li>
+                            </ul>
                         </div>
                     </div>
                     <div class="container--border container--row">
                         <div class="imgCenter--flex"><img src="images/User Interface Design img.png"></div>
                         <h3 class="txtCenter--flex">User Interface Design</h3>
                         <div class="container--row">
-
-                            <li>UI Patterns and Heuristics
-                            </li>
-                            <li>Gestalt Principles</li>
-                            <li>Colour Theory
-                            </li>
-                            <li>Iconography and Graphic Design
-                            </li>
-                            <li>Typography
-                            </li>
-                            <li> Style Guides
-                            </li>
-                            <li>Component Development
-                            </li>
-                            <li>Wireframing</li>
-                            <li>Mobile First Design Methods
-                            </li>
-                            <li>Responsive Web Design</li>
-                            <li>Low to High Fidelity Prototyping</li>
-                            <li>Interaction Design
-                            </li>
-                            <li>Mockups</li>
-
+                            <ul class="skillList">
+                                <li>UI Patterns and Heuristics
+                                </li>
+                                <li>Gestalt Principles</li>
+                                <li>Colour Theory
+                                </li>
+                                <li>Iconography and Graphic Design
+                                </li>
+                                <li>Typography
+                                </li>
+                                <li> Style Guides
+                                </li>
+                                <li>Component Development
+                                </li>
+                                <li>Wireframing</li>
+                                <li>Mobile First Design Methods
+                                </li>
+                                <li>Responsive Web Design</li>
+                                <li>Low to High Fidelity Prototyping</li>
+                                <li>Interaction Design
+                                </li>
+                                <li>Mockups</li>
+                            </ul>
                         </div>
                     </div>
                     <div class="container--border container--row">
                         <div class="imgCenter--flex"><img src="images/tools img.png"></div>
                         <h3 class="txtCenter--flex">Tools</h3>
                         <div class="container--row">
-
-                            <li>Figma</li>
-                            <li>Adobe XD
-                            </li>
-                            <li>Miro</li>
-                            <li>Zeplin</li>
-                            <li>Adobe Illustrator
-                            </li>
-                            <li>Adobe Photoshop
-                            </li>
-                            <li>Final Cut Pro
-                            </li>
-                            <li>GitHub
-                            </li>
-                            <li>VS Code</li>
-
+                            <ul class="skillList">
+                                <li>Figma</li>
+                                <li>Adobe XD
+                                </li>
+                                <li>Miro</li>
+                                <li>Zeplin</li>
+                                <li>Adobe Illustrator
+                                </li>
+                                <li>Adobe Photoshop
+                                </li>
+                                <li>Final Cut Pro
+                                </li>
+                                <li>GitHub
+                                </li>
+                                <li>VS Code</li>
+                            </ul>
                         </div>
                     </div>
                 </div>
             </div>
     </section>
-    <div class="sectionEndPadding">
-        <section class="endUp">
-            <a href="#" class="returnUp">
-                <img src="images/return_up.svg"></a>
-        </section>
+    <section id="contact">
+        <div id="contactHeader">
+            <h1>Kevin Buckle <span class="whiteTxt">Contact</span></h1>
+        </div>
+        <div class="flexContainer">
+            <div class="container">
+                <div class="skillSum">
+                    <h2>Hello Again, <br>Portfolio Goer.</h2>
+                    <p><span class="yellowTxt">Brief</span>: I have an obsessive fascination with details.
+                        <br> <br><span class="yellowTxt">Impact</span>: The skills I continue to craft are an attempt to satisfy my thoughts of unwavering analysis and ideation. I’ll admit My fixation with detail is tacitly selfish. However, ultimately
+                        I believe that in embracing these skills and methods I am able to help find creatively simple solutions.
+                    </p>
+                    <img src="images/me and bird img (1).png">
+                </div>
+            </div>
+            <div class="container--grandParent">
+                <div class="flexContainer">
+                    <div class="container--border container--row">
+                        <div class="imgCenter--flex"><img src="images/User Research img.png"></div>
+                        <h3 class="txtCenter--flex">User Research</h3>
+                        <div class="container--row">
+                            <ul class="skillList">
+                                <li>Define User Problems</li>
+                                <li>Competitor Analysis
+                                </li>
+                                <li>Develop Research Plan
+                                </li>
+                                <li>User Interviews/ Surveys
+                                </li>
+                                <li>Analysis User Data
+                                </li>
+                                <li>Affinity Diagrams
+                                </li>
+                                <li>Empathy Map</li>
+                                <li>User Personas
+                                </li>
+                                <li>Story Telling
+                                </li>
+                                <li>Task/ User Flows
+                                </li>
+                                <li>Card Sorting
+                                </li>
+                                <li>Information Architecture
+                                </li>
+                                <li>Usability/ A-B Testing
+                                </li>
+                                <li>Impactful User-centric Solutions
+                                </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="container--border container--row">
+                        <div class="imgCenter--flex"><img src="images/User Interface Design img.png"></div>
+                        <h3 class="txtCenter--flex">User Interface Design</h3>
+                        <div class="container--row">
+                            <ul class="skillList">
+                                <li>UI Patterns and Heuristics
+                                </li>
+                                <li>Gestalt Principles</li>
+                                <li>Colour Theory
+                                </li>
+                                <li>Iconography and Graphic Design
+                                </li>
+                                <li>Typography
+                                </li>
+                                <li> Style Guides
+                                </li>
+                                <li>Component Development
+                                </li>
+                                <li>Wireframing</li>
+                                <li>Mobile First Design Methods
+                                </li>
+                                <li>Responsive Web Design</li>
+                                <li>Low to High Fidelity Prototyping</li>
+                                <li>Interaction Design
+                                </li>
+                                <li>Mockups</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="container--border container--row">
+                        <div class="imgCenter--flex"><img src="images/tools img.png"></div>
+                        <h3 class="txtCenter--flex">Tools</h3>
+                        <div class="container--row">
+                            <ul class="skillList">
+                                <li>Figma</li>
+                                <li>Adobe XD
+                                </li>
+                                <li>Miro</li>
+                                <li>Zeplin</li>
+                                <li>Adobe Illustrator
+                                </li>
+                                <li>Adobe Photoshop
+                                </li>
+                                <li>Final Cut Pro
+                                </li>
+                                <li>GitHub
+                                </li>
+                                <li>VS Code</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </section>
+    <span id="backTop" class="returnUp dNone">
+    <img src="images/return_up.svg"></span>
+
 
 </body>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
