tidy css and media q
removed non used classes and id in css from previous version worked on media q changed old remaining pixels to rem need to fix responsiveness. need to fix grin on smallest screen

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
         </div>
 
     </section>
-
+    <!-- work end -->
     <!-- 3.new skills -->
 
     <section id="kbSkills">
@@ -228,6 +228,9 @@
                 </div>
             </div>
     </section>
+    <!-- skills end -->
+    <!-- 4. Contact Start -->
+
     <section id="contact">
         <div id="contactHeader">
             <h1>Kevin Buckle <span class="whiteTxt">Contact</span></h1>
