--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <div class="container--row">
                                 <h2 class="hClr2">Highlighted Projects</h2>
                                 <div id="chevron">
-                                    <img class="jello-horizontal" src="images/Chevron.svg">
+                                    <img class="chevronHeartBeatAnimate" src="images/Chevron.svg">
                                 </div>
                             </div>
                         </div>
@@ -138,7 +138,7 @@
                     <img src="images/me and bird img (1).png">
                 </div>
             </div>
-            <div class="container--grandParent">
+            <div class="container--grandParent2">
                 <div class="flexContainer">
                     <div class="container--border container--row">
                         <div class="imgCenter--flex"><img src="images/User Research img.png"></div>
@@ -233,108 +233,23 @@
 
     <section id="contact">
         <div id="contactHeader">
-            <h1>Kevin Buckle <span class="whiteTxt">Contact</span></h1>
+            <h1 class="hClr1">Kevin Buckle <span class="whiteTxt">Contact</span></h1>
         </div>
         <div class="flexContainer">
             <div class="container">
                 <div class="skillSum">
-                    <h2>Hello Again, <br>Portfolio Goer.</h2>
-                    <p><span class="yellowTxt">Brief</span>: I have an obsessive fascination with details.
-                        <br> <br><span class="yellowTxt">Impact</span>: The skills I continue to craft are an attempt to satisfy my thoughts of unwavering analysis and ideation. I’ll admit My fixation with detail is tacitly selfish. However, ultimately
-                        I believe that in embracing these skills and methods I am able to help find creatively simple solutions.
+                    <h2>Portfolio Goer, <br>Let's Chat.</h2>
+                    <p><span class="yellowTxt">Brief</span>: If you've enjoyed my portfolio please feel free to contact me and chat about the wonders of UX/UI.
+                        <br> <br><span class="yellowTxt">Impact</span>: The potential melding of our beautiful minds. The begining of an epic journey discovering impactful solutions to ever evoling design and user challenges. Kevin Buckle.
                     </p>
-                    <img src="images/me and bird img (1).png">
+
                 </div>
             </div>
             <div class="container--grandParent">
-                <div class="flexContainer">
-                    <div class="container--border container--row">
-                        <div class="imgCenter--flex"><img src="images/User Research img.png"></div>
-                        <h3 class="txtCenter--flex">User Research</h3>
-                        <div class="container--row">
-                            <ul class="skillList">
-                                <li>Define User Problems</li>
-                                <li>Competitor Analysis
-                                </li>
-                                <li>Develop Research Plan
-                                </li>
-                                <li>User Interviews/ Surveys
-                                </li>
-                                <li>Analysis User Data
-                                </li>
-                                <li>Affinity Diagrams
-                                </li>
-                                <li>Empathy Map</li>
-                                <li>User Personas
-                                </li>
-                                <li>Story Telling
-                                </li>
-                                <li>Task/ User Flows
-                                </li>
-                                <li>Card Sorting
-                                </li>
-                                <li>Information Architecture
-                                </li>
-                                <li>Usability/ A-B Testing
-                                </li>
-                                <li>Impactful User-centric Solutions
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="container--border container--row">
-                        <div class="imgCenter--flex"><img src="images/User Interface Design img.png"></div>
-                        <h3 class="txtCenter--flex">User Interface Design</h3>
-                        <div class="container--row">
-                            <ul class="skillList">
-                                <li>UI Patterns and Heuristics
-                                </li>
-                                <li>Gestalt Principles</li>
-                                <li>Colour Theory
-                                </li>
-                                <li>Iconography and Graphic Design
-                                </li>
-                                <li>Typography
-                                </li>
-                                <li> Style Guides
-                                </li>
-                                <li>Component Development
-                                </li>
-                                <li>Wireframing</li>
-                                <li>Mobile First Design Methods
-                                </li>
-                                <li>Responsive Web Design</li>
-                                <li>Low to High Fidelity Prototyping</li>
-                                <li>Interaction Design
-                                </li>
-                                <li>Mockups</li>
-                            </ul>
-                        </div>
-                    </div>
-                    <div class="container--border container--row">
-                        <div class="imgCenter--flex"><img src="images/tools img.png"></div>
-                        <h3 class="txtCenter--flex">Tools</h3>
-                        <div class="container--row">
-                            <ul class="skillList">
-                                <li>Figma</li>
-                                <li>Adobe XD
-                                </li>
-                                <li>Miro</li>
-                                <li>Zeplin</li>
-                                <li>Adobe Illustrator
-                                </li>
-                                <li>Adobe Photoshop
-                                </li>
-                                <li>Final Cut Pro
-                                </li>
-                                <li>GitHub
-                                </li>
-                                <li>VS Code</li>
-                            </ul>
-                        </div>
-                    </div>
+                <div class="container--row">
+                    <img id="kevContactimg" src="images/kevcontact.svg">
+                    <h3 id="email"><span>Email:</span> buckle.khm@gmail.com</h2>
                 </div>
-            </div>
     </section>
     <span id="backTop" class="returnUp dNone">
     <img src="images/return_up.svg"></span>
