--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
                     <div class="container--grandParent">
                         <h2 class="hClr2 txtEnd">Highlighted Projects</h2>
                         <div id="gridContainer1">
-                            <div class="prog1-item1">
+                            <div class="proj1-item1">
                                 <img src="images/RWD CBC MOCK UP IMG.png">
                             </div>
-                            <div class="prog1-item2">
+                            <div class="proj1-item2">
                                 <h2 class="projectTitle">RWD Redesign CBC Radio-Canada:<br><span class="proj1-subHeadStyle">Desktop and Mobile Case Study</span>
                                 </h2>
                                 <p class="projBriefTxt">Responsive Web Design Solutions redesigning Government Agency Website CBC Radio-Canada. </p>
@@ -263,7 +263,7 @@
             </div>
             <div class="container--grandParent">
                 <div class="container--row">
-                    <img id="kevContactimg" src="images/kevcontact.svg">
+                    <img id="kevContactimg" class="Flicker" src="images/kevcontact.svg">
                     <h3 id="email"><span>Email:</span> buckle.khm@gmail.com</h2>
                 </div>
     </section>
