--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
             <div class="container--grandParent">
                 <div class="container--row">
                     <img id="kevContactimg" class="Flicker" src="images/kevcontact.svg">
-                    <h3 id="email"><span>Email:</span> buckle.khm@gmail.com</h2>
+                    <h3 id="email"><span>Email-</span> buckle.khm@gmail.com</h2>
                 </div>
     </section>
     <span id="backTop" class="returnUp dNone">
