case study link
linked case study from portfolio

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                 <h2 class="projectTitle">RWD Redesign CBC Radio-Canada:<br><span class="proj1-subHeadStyle">Desktop and Mobile Case Study</span>
                                 </h2>
                                 <p class="projBriefTxt">Responsive Web Design Solutions redesigning Government Agency Website CBC Radio-Canada. </p>
-                                <div id="viewProjCta"><button class="viewProjCta">view project</button></div>
+                                <div id="viewProjCta"><a href="https://mrbuckle.github.io/UX_UI_HW_20/"><button class="viewProjCta">view project</button></a></div>
                             </div>
                         </div>
                         <div id="gridContainer2">
