hover state change
changed hover because analytics

--- a/index.html
+++ b/index.html
@@ -107,14 +107,16 @@
                     <div class="container--grandParent">
                         <h2 class="hClr2 txtEnd">Highlighted Projects</h2>
                         <div id="gridContainer1">
-                            <div class="proj1-item1">
-                                <img src="images/RWD CBC MOCK UP IMG.png">
-                            </div>
-                            <div class="proj1-item2">
-                                <h2 class="projectTitle">RWD Redesign CBC Radio-Canada:<br><span class="proj1-subHeadStyle">Desktop and Mobile Case Study</span>
-                                </h2>
-                                <p class="projBriefTxt">Responsive Web Design Solutions redesigning Government Agency Website CBC Radio-Canada. </p>
-                                <div id="viewProjCta"><a href="https://mrbuckle.github.io/UX_UI_HW_20/"><button class="viewProjCta">view project</button></a></div>
+                            <a href="https://mrbuckle.github.io/UX_UI_HW_20/">
+                                <div class="proj1-item1">
+                                    <img src="images/RWD CBC MOCK UP IMG.png">
+                                </div>
+                                <div class="proj1-item2">
+                                    <h2 class="projectTitle">RWD Redesign CBC Radio-Canada:<br><span class="proj1-subHeadStyle">Desktop and Mobile Case Study</span>
+                                    </h2>
+                                    <p class="projBriefTxt">Responsive Web Design Solutions redesigning Government Agency Website CBC Radio-Canada. </p>
+                                    <div id="viewProjCta"><button class="viewProjCta">view project</button></div>
+                            </a>
                             </div>
                         </div>
                         <div id="gridContainer2">
