--- a/index.html
+++ b/index.html
@@ -120,16 +120,18 @@
                             </div>
                         </div>
                         <div id="gridContainer2">
-                            <div class="proj2-item1">
-                                <img src="images/Itrip mock up img.png">
-                            </div>
-                            <div class="proj2-item2">
-                                <h2 class="projectTitle">iTrip Mobile Travel App Case Study:<br><span class="proj2-subHeadStyle">Start Up Development and Design</span>
-                                </h2>
-                                <p class="projBriefTxt">Researched and Design a mobile <br> app for Travel Planning Post-pandemic</p>
-                                <div id="viewProjCta">
-                                    <button class="viewProjCta">view project</button>
+                            <a href="https://docs.google.com/presentation/d/1NsmuyJx7N2fm3SMBOObr1wj6BwkTGwxgxBNeZqgDCBk/edit#slide=id.p">
+                                <div class="proj2-item1">
+                                    <img src="images/playano_img.png">
                                 </div>
+                                <div class="proj2-item2">
+                                    <h2 class="projectTitle">Playano - Interactive A.R. Piano App:<br><span class="proj2-subHeadStyle">Start Up Development and Design Case Study</span>
+                                    </h2>
+                                    <p class="projBriefTxt">Designed a mobile app for learning <br> piano through interactive A.R.</p>
+                                    <div id="viewProjCta">
+                                        <button class="viewProjCta">view project</button>
+                                    </div>
+                            </a>
                             </div>
                         </div>
                     </div>
