--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body id="body">
     <header class="navigation">
         <div class="inline-block logo">
-            <img src="images/logoBlue.png">
+            <img src="images/kbdesign_mtrdlogo_88pxl.png">
         </div>
         <nav class="inline-block">
             <ul>
