test colour changes
test colour changes. restored to og

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div class="container">
                     <div class="container--row">
                         <img src="images/home_img_2.png">
-                        <button id="downloadRes">Download Resume</button>
+                        <button id="downloadRes">View Resume</button>
                     </div>
                     <div id="contentAbout" class="container--narrow">
                         Hello, I’m Kevin Buckle, aspiring Product Designer. I have a background in fine art, design, and cultural philosophy.<br> <br> Not only am I a dedicated follower of fashion, I enjoy solving problems both design and otherwise. I
