--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
                         <button id="downloadRes">View Resume</button>
                     </div>
                     <div id="contentAbout" class="container--narrow">
-                        Hello, I’m Kevin Buckle, aspiring Product Designer. I have a background in fine art, design, and cultural philosophy.<br> <br> Not only am I a dedicated follower of fashion, I enjoy solving problems both design and otherwise. I
-                        love creating components, developing prototypes, crushing user flows and writing far too much copy. <br> <br> I have freelanced as a graphic/ commercial designer and illustrator designing album art and merchandise for bands and
-                        brands. I have been rapidly immersing myself in UX/ UI and absorbing its moisture like a thirsty hound to continue the next journey of my design aspirations.
+                        Hello, I am Kevin Buckle. A Ux/UI Visual Designer. I have a background in fine art, graphic design/ illustration, and cultural philosophy.<br> <br>Not only am I a dedicated follower of fashion, I am passionate about creativity
+                        and developing impactful design solutions. I enjoy problem solving, in-depth analysis, and wrestling with fine details.<br> <br>Blessed having worked in graphic design creating logos, apparel and merchandise, I leverage this and
+                        my background in critical thinking to enhance my experience as a UX/UI designer to develop strong modern designs and interfaces for users. I love design and the journey it takes me on.
                     </div>
                     <div>
                         <div id="mainAnimation" class="container container--row">
